@@ -2,6 +2,7 @@ On the road to 2024.08:
 ---
 Environment:
 - updated and unified usage information in all scripts
+- added clean-blockdevice script
 ---
 Highlights 2024.07:
 - kernel 6.10.x
